--- a/Kalculator/Kalculator.csproj
+++ b/Kalculator/Kalculator.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{56FC006A-6369-4121-AC16-0BA4EB72D733}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Kalc</RootNamespace>
-    <AssemblyName>Kalc</AssemblyName>
+    <RootNamespace>Kalculator</RootNamespace>
+    <AssemblyName>Kalculator</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -65,6 +65,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
